// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpecificationRule custom matchers matches failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": "Expected a partial match",
    "expected": "{\\"info\\":{\\"license\\":{}}}",
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": false,
    "received": "{\\"openapi\\":\\"3.1.3\\",\\"paths\\":{},\\"info\\":{\\"version\\":\\"0.0.0\\",\\"title\\":\\"Empty\\"}}",
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule custom matchers matches inverted assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "not match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule custom matchers matches passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "license": Object {
            "name": "MIT",
            "url": "some-url",
          },
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule custom matchers matchesOneOf failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": "Expected at least one partial match",
    "expected": "[{\\"info\\":{\\"license\\":{}}},{\\"security\\":[]}]",
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": false,
    "received": "{\\"openapi\\":\\"3.1.3\\",\\"paths\\":{},\\"info\\":{\\"version\\":\\"0.0.0\\",\\"title\\":\\"Empty\\"}}",
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule custom matchers matchesOneOf inverted assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "not match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule custom matchers matchesOneOf passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "license": Object {
            "name": "MIT",
            "url": "some-url",
          },
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule requirement failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "must contain x-stability",
    "docsLink": undefined,
    "error": "spec does not have x-stability",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": false,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule requirement passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-stability": "abc",
      },
    },
    "condition": "must contain x-stability",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule rulesContext after 1`] = `
Object {
  "custom": Object {},
  "operation": Object {
    "change": null,
    "cookieParameters": Map {},
    "headerParameters": Map {},
    "location": Object {
      "conceptualLocation": Object {
        "method": "",
        "path": "",
      },
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "operation",
    },
    "method": "",
    "path": "",
    "pathParameters": Map {},
    "queryParameters": Map {},
    "raw": Object {},
    "requests": Array [],
    "responses": Map {},
    "value": Object {
      "method": "",
      "pathPattern": "",
    },
  },
  "specification": Object {
    "change": "changed",
    "location": Object {
      "conceptualLocation": Object {},
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "specification",
    },
    "raw": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "paths": Object {},
    },
    "value": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
    },
  },
}
`;

exports[`SpecificationRule rulesContext after is empty spec 1`] = `
Object {
  "custom": Object {},
  "operation": Object {
    "change": null,
    "cookieParameters": Map {},
    "headerParameters": Map {},
    "location": Object {
      "conceptualLocation": Object {
        "method": "",
        "path": "",
      },
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "operation",
    },
    "method": "",
    "path": "",
    "pathParameters": Map {},
    "queryParameters": Map {},
    "raw": Object {},
    "requests": Array [],
    "responses": Map {},
    "value": Object {
      "method": "",
      "pathPattern": "",
    },
  },
  "specification": Object {
    "change": "removed",
    "location": Object {
      "conceptualLocation": Object {},
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "specification",
    },
    "raw": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "paths": Object {
        "/api/users": Object {
          "get": Object {
            "description": "hello",
            "responses": Object {},
          },
        },
      },
      "servers": Array [
        Object {
          "url": "http://optic.com",
        },
      ],
    },
    "value": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "servers": Array [
        Object {
          "url": "http://optic.com",
        },
      ],
    },
  },
}
`;

exports[`SpecificationRule rulesContext before 1`] = `
Object {
  "custom": Object {},
  "operation": Object {
    "change": null,
    "cookieParameters": Map {},
    "headerParameters": Map {},
    "location": Object {
      "conceptualLocation": Object {
        "method": "",
        "path": "",
      },
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "operation",
    },
    "method": "",
    "path": "",
    "pathParameters": Map {},
    "queryParameters": Map {},
    "raw": Object {},
    "requests": Array [],
    "responses": Map {},
    "value": Object {
      "method": "",
      "pathPattern": "",
    },
  },
  "specification": Object {
    "change": "changed",
    "location": Object {
      "conceptualLocation": Object {},
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "specification",
    },
    "raw": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "paths": Object {
        "/api/users": Object {
          "get": Object {
            "description": "hello",
            "responses": Object {},
          },
        },
      },
      "servers": Array [
        Object {
          "url": "http://optic.com",
        },
      ],
    },
    "value": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "servers": Array [
        Object {
          "url": "http://optic.com",
        },
      ],
    },
  },
}
`;

exports[`SpecificationRule rulesContext before is empty spec 1`] = `
Object {
  "custom": Object {},
  "operation": Object {
    "change": null,
    "cookieParameters": Map {},
    "headerParameters": Map {},
    "location": Object {
      "conceptualLocation": Object {
        "method": "",
        "path": "",
      },
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "operation",
    },
    "method": "",
    "path": "",
    "pathParameters": Map {},
    "queryParameters": Map {},
    "raw": Object {},
    "requests": Array [],
    "responses": Map {},
    "value": Object {
      "method": "",
      "pathPattern": "",
    },
  },
  "specification": Object {
    "change": "added",
    "location": Object {
      "conceptualLocation": Object {},
      "conceptualPath": Array [],
      "jsonPath": "",
      "kind": "specification",
    },
    "raw": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "paths": Object {},
      "x-optic-ci-empty-spec": true,
    },
    "value": Object {
      "info": Object {
        "title": "Empty",
        "version": "0.0.0",
      },
      "openapi": "3.1.3",
      "x-optic-ci-empty-spec": true,
    },
  },
}
`;
